--- a/example/index.html
+++ b/example/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>AmazonLex</title>
-    <meta name="author" content="lafranch">
-    <meta name="description" content="Lex Runtime example from the browser.">
-    <meta name="keywords" content="Amazon Lex, SDK, Runtime, Browser, JavaScript">
+    <title>Colors Software speech to text project</title>
+    <meta name="author" content="JK">
+    <meta name="description" content="Colors Software speech to text project">
+    <meta name="keywords" content="speech to text, cloud, api, machine learning NLP project">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32"/>
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16"/>
     <link rel="stylesheet" href="style.css">
@@ -15,11 +15,13 @@
 <body class="wrapper">
 <div class="audio-control">
     <p id="audio-control" class="white-circle">
-        <img src="lex.png">
+        <img src="mic.png">
         <canvas class="visualizer"></canvas>
     </p>
     <p><span id="message"></span></p>
-    <p>
+    <p><span id="transcribedmsg"></span></p>
+
+    <!--p>
         <input type="password" id="ACCESS_ID" name="ACCESS ID" placeholder="ACCESS ID" value=""/>
     </p>
     <p>
@@ -27,11 +29,17 @@
     </p>
     <p>
         <input type="text" id="BOT" name="BOT" placeholder="BOT" value=""/>
-    </p>
+    </p-->
 </div>
+      <div id="formats"></div>
+    	<p><strong>Recordings:</strong></p>
+    	<ol id="recordingsList"></ol>
+    </div>
 <script src="https://sdk.amazonaws.com/js/aws-sdk-2.48.0.min.js"></script>
 <script src="../dist/aws-lex-audio.js" type="text/javascript"></script>
+<script src="https://apis.google.com/js/api.js"></script>
 <script src="renderer.js" type="text/javascript"></script>
+
 <script type="text/javascript">
     var waveform = window.Waveform();
     var message = document.getElementById('message');
@@ -40,15 +48,16 @@
 
     document.getElementById('audio-control').onclick = function () {
 
-        AWS.config.credentials = new AWS.Credentials(document.getElementById('ACCESS_ID').value, document.getElementById('SECRET_KEY').value, null);
-        AWS.config.region = 'us-east-1';
+        //AWS.config.credentials = new AWS.Credentials(document.getElementById('ACCESS_ID').value, document.getElementById('SECRET_KEY').value, null);
+        //AWS.config.region = 'us-east-1';
         
         config = {
-            lexConfig: { botName: document.getElementById('BOT').value }
+            lexConfig: { botName: "jk"}//document.getElementById('BOT').value }
         };
 
         conversation = new LexAudio.conversation(config, function (state) {
             message.textContent = state + '...';
+	    console.log('state changed',message.textContent);
             if (state === 'Listening') {
                 waveform.prepCanvas();
             }
@@ -56,7 +65,8 @@
                 waveform.clearCanvas();
             }
         }, function (data) {
-            console.log('Transcript: ', data.inputTranscript, ", Response: ", data.message);
+            message.textContent = 'transcribed to ...' + data;
+            //console.log('Transcript: ', data.inputTranscript, ", Response: ", data.message);
         }, function (error) {
             message.textContent = error;
         }, function (timeDomain, bufferLength) {
@@ -66,6 +76,7 @@
     };
 
 </script>
+
 </body>
 
 </html>
