included constants file

--- a/example/index.html
+++ b/example/index.html
@@ -35,10 +35,13 @@
     	<p><strong>Recordings:</strong></p>
     	<ol id="recordingsList"></ol>
     </div>
+<script src="constants.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jsrsasign/8.0.20/jsrsasign-all-min.js"></script>
 <script src="https://sdk.amazonaws.com/js/aws-sdk-2.48.0.min.js"></script>
 <script src="../dist/aws-lex-audio.js" type="text/javascript"></script>
 <script src="https://apis.google.com/js/api.js"></script>
 <script src="renderer.js" type="text/javascript"></script>
+
 
 <script type="text/javascript">
     var waveform = window.Waveform();
