--- a/example/index.html
+++ b/example/index.html
@@ -32,7 +32,7 @@
     </p-->
 </div>
       <div id="formats"></div>
-    	<p><strong>Recordings:</strong></p>
+    	<p><span id="tip"></span></p>
     	<ol id="recordingsList"></ol>
     </div>
 <script src="constants.js"></script>
